fix: readd the text-pre-wrap class

--- a/src/main/scss/_utilities.scss
+++ b/src/main/scss/_utilities.scss
@@ -1,4 +1,16 @@
 @import 'bootstrap/scss/utilities';
+$utilities: map-merge(
+  $utilities,
+  (
+    "white-space": (
+      property: white-space,
+      class: text,
+      values: (
+        pre-wrap: pre-wrap,
+      )
+    ),
+  )
+);
 /*
 $utilities: map-merge(
   $utilities,
